fixed some page overlap infront of navigation

--- a/src/css/components/header.css
+++ b/src/css/components/header.css
@@ -3,7 +3,7 @@
     position: fixed;
     justify-content: space-between;
     width: 100%;
-    z-index: 3;
+    z-index: 1000;
     background-color: black;
 }
 
@@ -13,7 +13,7 @@
 
 .header_logo {
     box-sizing: content-box;
-    z-index: 10;
+    z-index: 500;
 }
 
 .header_logo, .header_menu_m, .header_menu_d {
@@ -30,7 +30,7 @@
 }
 
 .header_menu_m_button {
-    z-index: 10;
+    z-index: 500;
 }
 
 .navigation_background {
@@ -42,7 +42,7 @@
     position: fixed;
     top: 1rem;
     right: 1rem;
-    z-index: 5;
+    z-index: 100;
     transition: display 0s;
     transition: transform .8s;
 }
@@ -52,7 +52,7 @@
     position: fixed;
     top: 0;
     right: 0;
-    z-index: 8;
+    z-index: 50;
 
     opacity: 0;
     width: 0;
@@ -66,7 +66,7 @@
     transform: translate(-50%,-50%);
     list-style: none;
     text-align: center;
-    z-index: 10;
+    z-index: 600;
 }
 
 /*
